// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PanelWithDetails /> PanelWithDetails - bottom controls 1`] = `
<div
  className="panel-show-details panel-show-details-bottom panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-w-8 fa-fw icon-addong-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - custom labels 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-w-8 fa-fw icon-addong-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-w-8 fa-fw icon-addong-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default expanded 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={true}
        aria-selected={true}
        className={null}
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-down fa-w-10 fa-fw icon-addong-right"
          data-icon="angle-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Hide details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={false}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - small preview 1`] = `
<div
  className="panel-show-details panel-show-details-top panel-preview panel-preview-small panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-w-8 fa-fw icon-addong-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;
